Implement missing endpoint
